fix: update execution counts and clean up outputs in Jupyter notebook

--- a/Glue_with_step/write_to_rds.ipynb
+++ b/Glue_with_step/write_to_rds.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start as the Python Environment 'Python 3.12.3' is no longer available. Consider selecting another kernel or refreshing the list of Python Environments."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#importing libraries\n",
     "import pandas as pd\n",
@@ -216,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -301,38 +292,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pets_allowed\n",
-       "True     66717\n",
-       "False     4239\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "apartment_attributes['pets_allowed'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "apartment_attributes = apartment_attributes.drop(columns=['pets_allowed'])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -342,7 +301,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 200000 entries, 0 to 199999\n",
-      "Data columns (total 16 columns):\n",
+      "Data columns (total 17 columns):\n",
       " #   Column         Non-Null Count   Dtype  \n",
       "---  ------         --------------   -----  \n",
       " 0   id             200000 non-null  int64  \n",
@@ -353,16 +312,17 @@
       " 5   bedrooms       200000 non-null  int64  \n",
       " 6   fee            200000 non-null  float64\n",
       " 7   has_photo      200000 non-null  bool   \n",
-      " 8   price_display  200000 non-null  object \n",
-      " 9   price_type     200000 non-null  object \n",
-      " 10  square_feet    200000 non-null  int64  \n",
-      " 11  address        200000 non-null  object \n",
-      " 12  cityname       200000 non-null  object \n",
-      " 13  state          200000 non-null  object \n",
-      " 14  latitude       200000 non-null  float64\n",
-      " 15  longitude      200000 non-null  float64\n",
-      "dtypes: bool(1), float64(3), int64(4), object(8)\n",
-      "memory usage: 23.1+ MB\n"
+      " 8   pets_allowed   70956 non-null   object \n",
+      " 9   price_display  200000 non-null  object \n",
+      " 10  price_type     200000 non-null  object \n",
+      " 11  square_feet    200000 non-null  int64  \n",
+      " 12  address        200000 non-null  object \n",
+      " 13  cityname       200000 non-null  object \n",
+      " 14  state          200000 non-null  object \n",
+      " 15  latitude       200000 non-null  float64\n",
+      " 16  longitude      200000 non-null  float64\n",
+      "dtypes: bool(1), float64(3), int64(4), object(9)\n",
+      "memory usage: 24.6+ MB\n"
      ]
     }
    ],
@@ -388,6 +348,7 @@
       "  \"bedrooms\" INTEGER,\n",
       "  \"fee\" REAL,\n",
       "  \"has_photo\" INTEGER,\n",
+      "  \"pets_allowed\" INTEGER,\n",
       "  \"price_display\" TEXT,\n",
       "  \"price_type\" TEXT,\n",
       "  \"square_feet\" INTEGER,\n",
@@ -459,14 +420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CREATE TABLE \"bookings\" (\n",
+      "CREATE TABLE \"user_viewing\" (\n",
       "\"user_id\" INTEGER,\n",
       "  \"apartment_id\" INTEGER,\n",
       "  \"viewed_at\" TEXT,\n",
@@ -482,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,9 +525,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:__main__:Error creating schema for apartments: (pymysql.err.OperationalError) (1049, \"Unknown database 'real_estate'\")\n",
+      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n",
+      "ERROR:__main__:Error inserting data into apartments: (pymysql.err.OperationalError) (1049, \"Unknown database 'real_estate'\")\n",
+      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n",
+      "ERROR:__main__:Error creating schema for bookings: (pymysql.err.OperationalError) (1049, \"Unknown database 'real_estate'\")\n",
+      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n",
+      "ERROR:__main__:Error inserting data into bookings: (pymysql.err.OperationalError) (1049, \"Unknown database 'real_estate'\")\n",
+      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n",
+      "ERROR:__main__:Error creating schema for apartments_attributes: (pymysql.err.OperationalError) (1049, \"Unknown database 'real_estate'\")\n",
+      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n",
+      "ERROR:__main__:Error inserting data into apartments_attributes: (pymysql.err.OperationalError) (1049, \"Unknown database 'real_estate'\")\n",
+      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n",
+      "ERROR:__main__:Error creating schema for user_viewing: (pymysql.err.OperationalError) (1049, \"Unknown database 'real_estate'\")\n",
+      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n",
+      "ERROR:__main__:Error inserting data into user_viewing: (pymysql.err.OperationalError) (1049, \"Unknown database 'real_estate'\")\n",
+      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n"
+     ]
+    }
+   ],
    "source": [
     "# Create tables and insert data\n",
     "if engine:\n",
