fix: update execution counts and improve logging in Jupyter notebook

--- a/Glue_with_step/write_to_rds.ipynb
+++ b/Glue_with_step/write_to_rds.ipynb
@@ -468,7 +468,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:mysql.connector:package: mysql.connector.plugins\n",
+      "INFO:mysql.connector:plugin_name: mysql_native_password\n",
+      "INFO:mysql.connector:AUTHENTICATION_PLUGIN_CLASS: MySQLNativePasswordAuthPlugin\n",
+      "INFO:__main__:Database `real_estate` checked/created.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    conn = mysql.connector.connect(\n",
+    "        host=DB_HOST,\n",
+    "        user=DB_USER,\n",
+    "        password=DB_PASSWORD\n",
+    "    )\n",
+    "    cursor = conn.cursor()\n",
+    "    cursor.execute(f\"CREATE DATABASE IF NOT EXISTS {DB_NAME}\")\n",
+    "    logger.info(f\"Database `{DB_NAME}` checked/created.\")\n",
+    "    cursor.close()\n",
+    "    conn.close()\n",
+    "except mysql.connector.Error as err:\n",
+    "    logger.error(f\"Error creating database: {err}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,29 +557,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR:__main__:Error creating schema for apartments: (pymysql.err.OperationalError) (1049, \"Unknown database 'real_estate'\")\n",
-      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n",
-      "ERROR:__main__:Error inserting data into apartments: (pymysql.err.OperationalError) (1049, \"Unknown database 'real_estate'\")\n",
-      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n",
-      "ERROR:__main__:Error creating schema for bookings: (pymysql.err.OperationalError) (1049, \"Unknown database 'real_estate'\")\n",
-      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n",
-      "ERROR:__main__:Error inserting data into bookings: (pymysql.err.OperationalError) (1049, \"Unknown database 'real_estate'\")\n",
-      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n",
-      "ERROR:__main__:Error creating schema for apartments_attributes: (pymysql.err.OperationalError) (1049, \"Unknown database 'real_estate'\")\n",
-      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n",
-      "ERROR:__main__:Error inserting data into apartments_attributes: (pymysql.err.OperationalError) (1049, \"Unknown database 'real_estate'\")\n",
-      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n",
-      "ERROR:__main__:Error creating schema for user_viewing: (pymysql.err.OperationalError) (1049, \"Unknown database 'real_estate'\")\n",
-      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n",
-      "ERROR:__main__:Error inserting data into user_viewing: (pymysql.err.OperationalError) (1049, \"Unknown database 'real_estate'\")\n",
-      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n"
+      "INFO:__main__:Schema for apartments created.\n",
+      "INFO:__main__:Inserted 1000 rows into apartments\n",
+      "INFO:__main__:Inserted 2000 rows into apartments\n",
+      "INFO:__main__:Inserted 3000 rows into apartments\n",
+      "INFO:__main__:Inserted 4000 rows into apartments\n",
+      "INFO:__main__:Inserted 5000 rows into apartments\n",
+      "INFO:__main__:Inserted 6000 rows into apartments\n",
+      "INFO:__main__:Inserted 7000 rows into apartments\n",
+      "INFO:__main__:Inserted 8000 rows into apartments\n",
+      "INFO:__main__:Inserted 9000 rows into apartments\n",
+      "INFO:__main__:Inserted 10000 rows into apartments\n",
+      "INFO:__main__:Inserted 11000 rows into apartments\n",
+      "INFO:__main__:Inserted 12000 rows into apartments\n",
+      "INFO:__main__:Inserted 13000 rows into apartments\n",
+      "INFO:__main__:Inserted 14000 rows into apartments\n",
+      "INFO:__main__:Inserted 15000 rows into apartments\n",
+      "INFO:__main__:Inserted 16000 rows into apartments\n",
+      "INFO:__main__:Inserted 17000 rows into apartments\n",
+      "INFO:__main__:Inserted 18000 rows into apartments\n",
+      "INFO:__main__:Inserted 19000 rows into apartments\n",
+      "INFO:__main__:Inserted 20000 rows into apartments\n",
+      "INFO:__main__:Inserted 21000 rows into apartments\n",
+      "INFO:__main__:Inserted 22000 rows into apartments\n",
+      "INFO:__main__:Inserted 23000 rows into apartments\n"
      ]
     }
    ],
