fix: recreate indexes with existence check for optimized querying

--- a/Glue_with_step/write_to_rds.ipynb
+++ b/Glue_with_step/write_to_rds.ipynb
@@ -587,7 +587,168 @@
       "INFO:__main__:Inserted 20000 rows into apartments\n",
       "INFO:__main__:Inserted 21000 rows into apartments\n",
       "INFO:__main__:Inserted 22000 rows into apartments\n",
-      "INFO:__main__:Inserted 23000 rows into apartments\n"
+      "INFO:__main__:Inserted 23000 rows into apartments\n",
+      "INFO:__main__:Inserted 24000 rows into apartments\n",
+      "INFO:__main__:Inserted 25000 rows into apartments\n",
+      "INFO:__main__:Inserted 26000 rows into apartments\n",
+      "INFO:__main__:Inserted 27000 rows into apartments\n",
+      "INFO:__main__:Inserted 28000 rows into apartments\n",
+      "INFO:__main__:Inserted 29000 rows into apartments\n",
+      "INFO:__main__:Inserted 30000 rows into apartments\n",
+      "INFO:__main__:Inserted 31000 rows into apartments\n",
+      "INFO:__main__:Inserted 32000 rows into apartments\n",
+      "INFO:__main__:Inserted 33000 rows into apartments\n",
+      "INFO:__main__:Inserted 34000 rows into apartments\n",
+      "INFO:__main__:Inserted 35000 rows into apartments\n",
+      "INFO:__main__:Inserted 36000 rows into apartments\n",
+      "INFO:__main__:Inserted 37000 rows into apartments\n",
+      "INFO:__main__:Inserted 38000 rows into apartments\n",
+      "INFO:__main__:Inserted 39000 rows into apartments\n",
+      "INFO:__main__:Inserted 40000 rows into apartments\n",
+      "INFO:__main__:Inserted 41000 rows into apartments\n",
+      "INFO:__main__:Inserted 42000 rows into apartments\n",
+      "INFO:__main__:Inserted 43000 rows into apartments\n",
+      "INFO:__main__:Inserted 44000 rows into apartments\n",
+      "INFO:__main__:Inserted 45000 rows into apartments\n",
+      "INFO:__main__:Inserted 46000 rows into apartments\n",
+      "INFO:__main__:Inserted 47000 rows into apartments\n",
+      "INFO:__main__:Inserted 48000 rows into apartments\n",
+      "INFO:__main__:Inserted 49000 rows into apartments\n",
+      "INFO:__main__:Inserted 50000 rows into apartments\n",
+      "INFO:__main__:Inserted 51000 rows into apartments\n",
+      "INFO:__main__:Inserted 52000 rows into apartments\n",
+      "INFO:__main__:Inserted 53000 rows into apartments\n",
+      "INFO:__main__:Inserted 54000 rows into apartments\n",
+      "INFO:__main__:Inserted 55000 rows into apartments\n",
+      "INFO:__main__:Inserted 56000 rows into apartments\n",
+      "INFO:__main__:Inserted 57000 rows into apartments\n",
+      "INFO:__main__:Inserted 58000 rows into apartments\n",
+      "INFO:__main__:Inserted 59000 rows into apartments\n",
+      "INFO:__main__:Inserted 60000 rows into apartments\n",
+      "INFO:__main__:Inserted 61000 rows into apartments\n",
+      "INFO:__main__:Inserted 62000 rows into apartments\n",
+      "INFO:__main__:Inserted 63000 rows into apartments\n",
+      "INFO:__main__:Inserted 64000 rows into apartments\n",
+      "INFO:__main__:Inserted 65000 rows into apartments\n",
+      "INFO:__main__:Inserted 66000 rows into apartments\n",
+      "INFO:__main__:Inserted 67000 rows into apartments\n",
+      "INFO:__main__:Inserted 68000 rows into apartments\n",
+      "INFO:__main__:Inserted 69000 rows into apartments\n",
+      "INFO:__main__:Inserted 70000 rows into apartments\n",
+      "INFO:__main__:Inserted 71000 rows into apartments\n",
+      "INFO:__main__:Inserted 72000 rows into apartments\n",
+      "INFO:__main__:Inserted 73000 rows into apartments\n",
+      "INFO:__main__:Inserted 74000 rows into apartments\n",
+      "INFO:__main__:Inserted 75000 rows into apartments\n",
+      "INFO:__main__:Inserted 76000 rows into apartments\n",
+      "INFO:__main__:Inserted 77000 rows into apartments\n",
+      "INFO:__main__:Inserted 78000 rows into apartments\n",
+      "INFO:__main__:Inserted 79000 rows into apartments\n",
+      "INFO:__main__:Inserted 80000 rows into apartments\n",
+      "INFO:__main__:Inserted 81000 rows into apartments\n",
+      "INFO:__main__:Inserted 82000 rows into apartments\n",
+      "INFO:__main__:Inserted 83000 rows into apartments\n",
+      "INFO:__main__:Inserted 84000 rows into apartments\n",
+      "INFO:__main__:Inserted 85000 rows into apartments\n",
+      "INFO:__main__:Inserted 86000 rows into apartments\n",
+      "INFO:__main__:Inserted 87000 rows into apartments\n",
+      "INFO:__main__:Inserted 88000 rows into apartments\n",
+      "INFO:__main__:Inserted 89000 rows into apartments\n",
+      "INFO:__main__:Inserted 90000 rows into apartments\n",
+      "INFO:__main__:Inserted 91000 rows into apartments\n",
+      "INFO:__main__:Inserted 92000 rows into apartments\n",
+      "INFO:__main__:Inserted 93000 rows into apartments\n",
+      "INFO:__main__:Inserted 94000 rows into apartments\n",
+      "INFO:__main__:Inserted 95000 rows into apartments\n",
+      "INFO:__main__:Inserted 96000 rows into apartments\n",
+      "INFO:__main__:Inserted 97000 rows into apartments\n",
+      "INFO:__main__:Inserted 98000 rows into apartments\n",
+      "INFO:__main__:Inserted 99000 rows into apartments\n",
+      "INFO:__main__:Inserted 100000 rows into apartments\n",
+      "INFO:__main__:Inserted 101000 rows into apartments\n",
+      "INFO:__main__:Inserted 102000 rows into apartments\n",
+      "INFO:__main__:Inserted 103000 rows into apartments\n",
+      "INFO:__main__:Inserted 104000 rows into apartments\n",
+      "INFO:__main__:Inserted 105000 rows into apartments\n",
+      "INFO:__main__:Inserted 106000 rows into apartments\n",
+      "INFO:__main__:Inserted 107000 rows into apartments\n",
+      "INFO:__main__:Inserted 108000 rows into apartments\n",
+      "INFO:__main__:Inserted 109000 rows into apartments\n",
+      "INFO:__main__:Inserted 110000 rows into apartments\n",
+      "INFO:__main__:Inserted 111000 rows into apartments\n",
+      "INFO:__main__:Inserted 112000 rows into apartments\n",
+      "INFO:__main__:Inserted 113000 rows into apartments\n",
+      "INFO:__main__:Inserted 114000 rows into apartments\n",
+      "INFO:__main__:Inserted 115000 rows into apartments\n",
+      "INFO:__main__:Inserted 116000 rows into apartments\n",
+      "INFO:__main__:Inserted 117000 rows into apartments\n",
+      "INFO:__main__:Inserted 118000 rows into apartments\n",
+      "INFO:__main__:Inserted 119000 rows into apartments\n",
+      "INFO:__main__:Inserted 120000 rows into apartments\n",
+      "INFO:__main__:Inserted 121000 rows into apartments\n",
+      "INFO:__main__:Inserted 122000 rows into apartments\n",
+      "INFO:__main__:Inserted 123000 rows into apartments\n",
+      "INFO:__main__:Inserted 124000 rows into apartments\n",
+      "INFO:__main__:Inserted 125000 rows into apartments\n",
+      "INFO:__main__:Inserted 126000 rows into apartments\n",
+      "INFO:__main__:Inserted 127000 rows into apartments\n",
+      "INFO:__main__:Inserted 128000 rows into apartments\n",
+      "INFO:__main__:Inserted 129000 rows into apartments\n",
+      "INFO:__main__:Inserted 130000 rows into apartments\n",
+      "INFO:__main__:Inserted 131000 rows into apartments\n",
+      "INFO:__main__:Inserted 132000 rows into apartments\n",
+      "INFO:__main__:Inserted 133000 rows into apartments\n",
+      "INFO:__main__:Inserted 134000 rows into apartments\n",
+      "INFO:__main__:Inserted 135000 rows into apartments\n",
+      "INFO:__main__:Inserted 136000 rows into apartments\n",
+      "INFO:__main__:Inserted 137000 rows into apartments\n",
+      "INFO:__main__:Inserted 138000 rows into apartments\n",
+      "INFO:__main__:Inserted 139000 rows into apartments\n",
+      "INFO:__main__:Inserted 140000 rows into apartments\n",
+      "INFO:__main__:Inserted 141000 rows into apartments\n",
+      "INFO:__main__:Inserted 142000 rows into apartments\n",
+      "INFO:__main__:Inserted 143000 rows into apartments\n",
+      "INFO:__main__:Inserted 144000 rows into apartments\n",
+      "INFO:__main__:Inserted 145000 rows into apartments\n",
+      "INFO:__main__:Inserted 146000 rows into apartments\n",
+      "INFO:__main__:Inserted 147000 rows into apartments\n",
+      "INFO:__main__:Inserted 148000 rows into apartments\n",
+      "INFO:__main__:Inserted 149000 rows into apartments\n",
+      "INFO:__main__:Inserted 150000 rows into apartments\n",
+      "INFO:__main__:Inserted 151000 rows into apartments\n",
+      "INFO:__main__:Inserted 152000 rows into apartments\n",
+      "INFO:__main__:Inserted 153000 rows into apartments\n",
+      "INFO:__main__:Inserted 154000 rows into apartments\n",
+      "INFO:__main__:Inserted 155000 rows into apartments\n",
+      "INFO:__main__:Inserted 156000 rows into apartments\n",
+      "INFO:__main__:Inserted 157000 rows into apartments\n",
+      "INFO:__main__:Inserted 158000 rows into apartments\n",
+      "INFO:__main__:Inserted 159000 rows into apartments\n",
+      "INFO:__main__:Inserted 160000 rows into apartments\n",
+      "INFO:__main__:Inserted 161000 rows into apartments\n",
+      "INFO:__main__:Inserted 162000 rows into apartments\n",
+      "INFO:__main__:Inserted 163000 rows into apartments\n",
+      "INFO:__main__:Inserted 164000 rows into apartments\n",
+      "INFO:__main__:Inserted 165000 rows into apartments\n",
+      "INFO:__main__:Inserted 166000 rows into apartments\n",
+      "INFO:__main__:Inserted 167000 rows into apartments\n",
+      "INFO:__main__:Inserted 168000 rows into apartments\n",
+      "INFO:__main__:Inserted 169000 rows into apartments\n",
+      "INFO:__main__:Inserted 170000 rows into apartments\n",
+      "INFO:__main__:Inserted 171000 rows into apartments\n",
+      "INFO:__main__:Inserted 172000 rows into apartments\n",
+      "INFO:__main__:Inserted 173000 rows into apartments\n",
+      "INFO:__main__:Inserted 174000 rows into apartments\n",
+      "INFO:__main__:Inserted 175000 rows into apartments\n",
+      "INFO:__main__:Inserted 176000 rows into apartments\n",
+      "INFO:__main__:Inserted 177000 rows into apartments\n",
+      "INFO:__main__:Inserted 178000 rows into apartments\n",
+      "INFO:__main__:Inserted 179000 rows into apartments\n",
+      "INFO:__main__:Inserted 180000 rows into apartments\n",
+      "INFO:__main__:Inserted 181000 rows into apartments\n",
+      "INFO:__main__:Inserted 182000 rows into apartments\n",
+      "INFO:__main__:Inserted 183000 rows into apartments\n",
+      "INFO:__main__:Inserted 184000 rows into apartments\n"
      ]
     }
    ],
